[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptforge"
version = "0.1.0"
description = "Version control for LLM prompts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
promptforge = "promptforge.cli:main"
